--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy
+numpy==1.23.5
 streamlit==1.22.0
 Pillow==9.5.0
 keras==2.12.0
-tensorflow==2.13.0
+tensorflow==2.12.0
 matplotlib==3.5.1
 opencv-python-headless
 streamlit-image-select==0.5.1
